# zephyr_test_sketches

./: README.md
ILI9341_library/include/: ILI9341_GIGA_zephyr.h
ILI9341_library/src/: ILI9341_GIGA_zephyr.cpp
ILI9341_plus/: CMakeLists.txt  app.overlay  build_errors.txt  prj.conf
ILI9341_plus/src/: ILI9341_GIGA_zephyr.cpp  ILI9341_GIGA_zephyr.h  UARTDevice.cpp  (+2 more)
ILI9341_touchpaint_xpt2046/: CMakeLists.txt  app.overlay  prj.conf
ILI9341_touchpaint_xpt2046_teensy_library/: CMakeLists.txt  app.overlay  prj.conf
Modified BMI150.c/: bmm150.c
SDRAM_test/: CMakeLists.txt  README.rst  app.overlay  prj.conf
ST77XX_test/: CMakeLists.txt  prj.conf
Teensy_wire_scanner/: CMakeLists.txt  prj.conf  teensy41.overlay
USBToSerial/: CMakeLists.txt  app.overlay  prj.conf  zephyr_tree.html
camera_capture_to_usb/: prj.conf
camera_capture_to_usb_common/: CMakeLists.txt  Kconfig  prj.conf
camera_to_giga_display/: CMakeLists.txt  Kconfig  prj.conf
camera_to_ili9341/: CMakeLists.txt  prj.conf
camera_to_ili9341/boards/: arduino_portenta_h7_stm32h747xx_m7.conf  arduino_portenta_h7_stm32h747xx_m7.overlay
camera_to_ili9341/src/: main.cpp
camera_to_tft/: Kconfig  prj.conf  vnd,spi-tft.yaml
camera_to_tft_simple/: Kconfig  prj.conf
cdc_acm_bridge/: app.overlay
common/: common.cmake
dma_callback_test/: app.overlay  prj.conf
i2c_bmi270/: app.overlay  prj.conf  sample.yaml
i2c_bmm150/: CMakeLists.txt  prj.conf
ov5640_to_ili9341/: CMakeLists.txt
print_touch_events/: flash_giga.bat  prj.conf
zephyr-sd/: CMakeLists.txt  app.overlay  build_output.txt  prj.conf
(+79 files in other folders)
